--- a/Day1/styles.css
+++ b/Day1/styles.css
@@ -18,6 +18,7 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 
 .name {
@@ -69,4 +70,19 @@ a:link, a:visited {
 
 a:hover {
     text-decoration: none;
+}
+
+.hidden-bar {
+    height: 5px;
+}
+
+.hidden-bar:hover .hidden-button {
+    display: block;
+}
+
+.hidden-button {
+    border-radius: 3px;
+    border: none;
+    display: none;
+    font-size: 9px;
 }
