--- a/tasks/todo-list/src/assets/main.css
+++ b/tasks/todo-list/src/assets/main.css
@@ -1,8 +1,12 @@
 @import './base.css';
 
 #app {
-    max-width: 1280px;
+    height: 800px;
+    width: 1280px;
     margin: 0 auto;
     padding: 2rem;
     font-weight: normal;
+    background-image: url('../assets/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
